--- a/scrip externo/ola-mundo.html
+++ b/scrip externo/ola-mundo.html
@@ -9,7 +9,7 @@
 <body>
     <div id="titulo">Flamengo</div>
     <!--linkando html com java -->
-    <script src="../app.js">
+    <script src="app.js">
     
     </script>
     
