--- a/Dom/index.html
+++ b/Dom/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="fruta">
+        laranja
+    </div>
+
+    <script>
+
+        console.log(
+            document.getElementById("fruta").innerHTML
+        )
+    </script>
     
 </body>
 </html>
