atualização da aula

--- a/Dom/Get-id-class.html
+++ b/Dom/Get-id-class.html
@@ -11,11 +11,25 @@
         laranja
     </div>
 
-    <script>
+    <div class="time">
+        flamengo
+    </div>
 
+    <div class="time">
+        sao paulo
+    </div>
+
+    <script>
+        // mostre no terminal
+        // busque elemento q responde ao id
         console.log(
             document.getElementById("fruta").innerHTML
         )
+
+        console.log(
+            document.getElementsByClassName("time")[0].innerHTML
+        )
+      
     </script>
     
 </body>
