--- a/Dom/Get-id-class.html
+++ b/Dom/Get-id-class.html
@@ -19,6 +19,8 @@
         sao paulo
     </div>
 
+  
+
     <script>
         // mostre no terminal
         // busque elemento q responde ao id
@@ -26,9 +28,11 @@
             document.getElementById("fruta").innerHTML
         )
 
+        // por class
         console.log(
             document.getElementsByClassName("time")[0].innerHTML
         )
+
       
     </script>
     
