--- a/Dom/Get-tag-name.html
+++ b/Dom/Get-tag-name.html
@@ -21,7 +21,7 @@
     )
     //pega a primeira q apaerece
     console.log(
-        document.querySelector("div").innerText
+        document.querySelector("div").innerHTML
     )
     </script>
 
