--- a/Tratamento-Dados/somando-valores.html
+++ b/Tratamento-Dados/somando-valores.html
@@ -20,6 +20,10 @@
         var soma = n1 + n2 
 
         window.alert("a soma dos valores é " + soma)
+
+        // converter de string p numero é Number(N)
+        // de string para number é String(N)
+
         
     </script>
 </body>
