--- a/Tratamento-Dados/nome-idade-nota.html
+++ b/Tratamento-Dados/nome-idade-nota.html
@@ -9,16 +9,23 @@
 <body>
     
     <script>
+
         //perguntar e guardar dados da pergunta
-        var nome = window.prompt("Qual o seu nome ? ")
-        var idade = window.prompt("qual a sua idade ? ")
-        var nota =  window.prompt("qual a sua nota ? ")
+            var nome = window.prompt("Qual o seu nome ? ")
+            var idade = window.prompt("qual a sua idade ? ")
+            var nota =  window.prompt("qual a sua nota ? ")
 
 
         //exibir dados
-       window.alert('ola ' + nome )
-       window.alert('voce tem ' + idade)
-       window.alert('sua nota foi ' + nota)
+            window.alert('ola ' + nome )
+            window.alert('voce tem ' + idade)
+            window.alert('sua nota foi ' + nota)
+
+
+            //formatando a virgula dos numeros
+        var n1 =1545.5
+          
+        window.alert(n1.toFixed(2))
 
 
 
