--- a/Variaveis/test.html
+++ b/Variaveis/test.html
@@ -16,13 +16,13 @@
 <body>
 
     <div id="titulo">
-        10
+        1
     </div>
     
 
     <script>
 
-var media = document.getElementById("titulo")
+var media = document.getElementById("titulo").innerHTML
 
        
 
