--- a/Variaveis/test.html
+++ b/Variaveis/test.html
@@ -10,6 +10,8 @@
             background-color: black;
             height: 100px;
             width: 100px;
+            color: white;
+            margin: 10px;
         }
     </style>
 </head>
@@ -18,11 +20,17 @@
     <div id="titulo">
         10
     </div>
+
+    <div >
+       resultado
+
+    </div>
+
     
 
     <script>
 
-var media = document.getElementById("titulo")
+    var media = document.getElementById("titulo").innerHTML
 
        
 
