--- a/Dom/Get-tag-name.html
+++ b/Dom/Get-tag-name.html
@@ -15,7 +15,7 @@
 
     <script> 
 
-    //retorna por nome da tag 
+    //exibir por nome da tag e puxando as frases
     console.log(
         document.getElementsByTagName("p")[0].innerHTML
     )
