--- a/Dom/Eventos-para-soma.html
+++ b/Dom/Eventos-para-soma.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando numeros</title>
+    <style>
+        #txtn1{
+            border: 2px solid red;
+            background-color: black;
+            color: white;
+            text-align: center;
+            height: 50px;
+            font-size: 1.3em;
+            overflow-y: scroll none;
+        }
+    </style>
 </head>
 <body>
     <h1>Somando Valores</h1>
@@ -13,7 +24,7 @@
     <!--quando clicar dispara a funcao-->
     <input type="button" value="Soma" onclick="soma()">
 
-    <div id="res">oi</div>
+    <div id="res">Resultado</div>
 
     <script>
         function soma(){
