--- a/Variaveis/test.html
+++ b/Variaveis/test.html
@@ -34,8 +34,8 @@
         <button class="bt">5</button>
         <button class="bt">6</button>
         <button class="b-">-</button><br>
-        <button class="bt">1</button>
-        <button class="bt">2</button>
+        <button class="bt" onclick="one()" id="n1">1</button>
+        <button class="bt" onclick="tue()" id="n2">2</button>
         <button class="bt">3</button>
         <button class="b2" onclick="soma()">+</button><br>
         <button class="bt">0</button>
