--- a/Variaveis/test.html
+++ b/Variaveis/test.html
@@ -13,34 +13,34 @@
 
     <!--cabecalio-->
     <div class="heder">
-        <div class="resultado" id="res">
-            <h1>0</h1>
+        <div id="resultado" >
+            <h1></h1>
         </div>
     </div>
 
   
     <!--numeros-->
-    <div class="numeros">
-        <div class="posi">
-        <button class="bt">C</button>
-        <button class="bt">''</button>
-        <button class="bt">''</button>
-        <button class="bt">''</button>  
-        <button class="bt">7</button>
-        <button class="bt">8</button>
-        <button class="bt">9</button>
-        <button class="bt">x</button><br>
-        <button class="bt">4</button>
-        <button class="bt">5</button>
-        <button class="bt">6</button>
-        <button class="b-">-</button><br>
-        <button class="bt" onclick="one()" id="n1">1</button>
-        <button class="bt" onclick="tue()" id="n2">2</button>
-        <button class="bt">3</button>
-        <button class="b2" onclick="soma()">+</button><br>
-        <button class="bt">0</button>
-        <button class="bt">,</button>
-        <button class="bt1">=</button>  
+<div class="numeros">
+   <div class="posi">
+     <button class="bt">C</button>
+    <button class="bt">''</button>
+    <button class="bt">''</button>
+    <button class="bt">''</button>  
+    <button class="bt">7</button>
+    <button class="bt">8</button>
+    <button class="bt">9</button>
+    <button class="bt">x</button><br>
+    <button class="bt">4</button>
+    <button class="bt">5</button>
+    <button class="bt">6</button>
+    <button class="b-">-</button><br>
+    <button class="bt" onclick="insert('1')" id="n1">1</button>
+    <button class="bt" onclick="insert('2')" id="n2">2</button>
+    <button class="bt">3</button>
+    <button class="b2" onclick="soma()">+</button><br>
+    <button class="bt">0</button>
+    <button class="bt">,</button>
+    <button class="bt1">=</button>  
         </div>
         
     </div>
