--- a/Variaveis/test.html
+++ b/Variaveis/test.html
@@ -35,7 +35,7 @@
     <button class="bt">6</button>
     <button class="b-">-</button><br>
     <button class="bt" onclick="insert('1')" id="n1">1</button>
-    <button class="bt" onclick="insert('2')" id="n2">2</button>
+    <button class="bt" onclick="insert('2')" >2</button>
     <button class="bt">3</button>
     <button class="b2" onclick="soma()">+</button><br>
     <button class="bt">0</button>
