--- a/Condicionais/if-dentro-de-ifs-aninhados.html
+++ b/Condicionais/if-dentro-de-ifs-aninhados.html
@@ -39,7 +39,7 @@
             var res = document.getElementById("res")
 
             if (idade < 16 ){
-              res.innerText = ("nao vota")
+              res.innerHTML = "nao vota"
           } 
           else if(idade < 18 || idade > 65){
               res.innerText = ("voto op")
