--- a/Repetições/for.html
+++ b/Repetições/for.html
@@ -8,13 +8,9 @@
 </head>
 <body>
     <script>
-    var c = 1
-
-    while(c <=6){
-    window.alert("tudo bem")
-    c++
-    }
-    
+        for (var c = 1 ; c<=10 ; c++){
+            window.alert("tudo bem")
+        }
     </script>
 </body>
-</html> 
+</html>
