--- a/Exercisios/relogio.html
+++ b/Exercisios/relogio.html
@@ -49,6 +49,7 @@
         }
         
         section{
+            font-family: Arial, Helvetica, sans-serif;
             font-size: 3.10em;
         }
 
