--- a/Exercisios/testes.html
+++ b/Exercisios/testes.html
@@ -15,10 +15,19 @@
 
             var date = new Date()
             var anoatual = date.getFullYear()
+
+            var idade = anoatual - anonas.value
             
             if (anonas.value  == 0 || (anonas.value) > anoatual){
                 window.alert("Erro tente novamente")
-            }
+            } else {
+                window.alert(idade)
+
+                var genero = ''
+                if (idade >= 0 && idade <=10 ){
+                    i
+                }
+            } 
 
         }
     </script>
